# jude

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  SchemaHelper.cmake
.github/workflows/: c-cpp.yml
cli/: CMakeLists.txt  JsonPrettyPrinter.cpp  JsonPrettyPrinter.h  RestApiClient.cpp  RestApiClient.h  linenoise.hpp  main.cpp
examples/jude_server/: CMakeLists.txt  main.cpp
examples/jude_server/schemas/: server_example.yaml
generator/: jude_generator.py
generator/printers/: bitmask_printer.py  enum_printer.py
generator/templates/: AtomicAccessors.py  BitmaskAccessors.py  BytesAccessors.py  ObjectAccessors.py  StringAccessors.py
include/jude/: jude.h  jude_core.h
include/jude/core/c/: jude_bitfield.h  jude_common.h  jude_debug.h  jude_decode.h  jude_encode.h  jude_enum.h  jude_field.h  jude_filter.h  jude_internal.h  jude_iterator.h  jude_json_schema.h  jude_notification_queue.h  jude_object.h  jude_rtti.h  jude_stream.h
include/jude/core/cpp/: AccessControl.h  AtomicArray.h  BitMask.h  BytesArray.h  FieldMask.h  Notification.h  NotifyQueue.h  Object.h  ObjectArray.h  PubSubInterface.h  RestApiInterface.h  RestfulResult.h  Stream.h  StringArray.h  Validatable.h
include/jude/database/: Collection.h  CollectionIterator.h  Database.h  DatabaseEntry.h  JsonSchema.h  Relationships.h  Resource.h  Swagger.h  Timeseries.h  Transaction.h
include/jude/integration/http/: HttpServer.h  httplib.h
include/jude/integration/mqtt/: mosquitto.h
include/jude/integration/persistence/: filesystem.h
include/jude/integration/timeseries/: timeseries.h
include/jude/porting/: Mutex.h  jude_porting.h
include/jude/restapi/: jude_browser.h  jude_rest_api.h
src/: CMakeLists.txt
src/core/c/: jude_bitfield.c  jude_common.c  jude_debug.c  jude_decode.c  jude_decode_binary.c  jude_decode_json.c  jude_decode_raw.c  jude_encode.c  jude_encode_binary.c  jude_encode_json.c  jude_encode_raw.c  jude_enum.c  jude_field.c  jude_filter.c  jude_internal.c  jude_iterator.c  jude_json_schema.c  jude_notification_queue.c  jude_object.c  jude_rtti.c  jude_stream.c
src/core/cpp/: AccessControl.cpp  AtomicArray.cpp  BitMask.cpp  BytesArray.cpp  FieldMask.cpp  JsonSchema.cpp  NotifyQueue.cpp  Object.cpp  ObjectArray.cpp  Options.cpp  RestApiInterface.cpp  RestfulResult.cpp  Stream.cpp  StringArray.cpp
src/database/: Collection.cpp  CollectionIterator.cpp  Database.cpp  JsonSchema.cpp  Relationships.cpp  Resource.cpp  Swagger.cpp  Transaction.cpp
src/porting/: Porting.md  jude_port_std_c++11.cpp
src/restapi/: jude_browser.c  jude_rest_api.c
src/server/: HttpServer.cpp
tests/: CMakeLists.txt  gtest.cmake
tests/core/: Untitled-1.json  Untitled-2.json  test_base.h  test_bitfield.cpp  test_common.cpp  test_decode_binary.cpp  test_decode_json.cpp  test_decode_raw.cpp  test_encode_binary.cpp  test_encode_json.cpp  test_encode_raw.cpp  test_enum.cpp  test_field.cpp  test_filter.cpp  test_iterator.cpp  test_json_schema.cpp  test_resource.cpp  test_swagger_gen.cpp
tests/corecpp/: test_action_subscription.cpp  test_array_accessors.cpp  test_custom_id_fields.cpp  test_notify_on_change.cpp  test_optional_accessors.cpp  test_optional_subscription.cpp  test_queued_subscription.cpp  test_resource_array.cpp
tests/database/: FullSwaggerText.h  test_collection iterators.cpp  test_collection.cpp  test_database.cpp  test_relationships_cascadedelete.cpp  test_relationships_deleteboth.cpp  test_relationships_one_to_many.cpp  test_resources.cpp
tests/porting/: jude_test_porting.cpp
tests/restapi/: test_browser.cpp  test_database_completions.cpp  test_resource_completions.cpp  test_rest_api_delete.cpp  test_rest_api_get.cpp  test_rest_api_patch.cpp  test_rest_api_post.cpp  test_rest_api_put.cpp
tests/schemas/: alltypes_test.yaml  external.yaml
tests/streams/: mock_istream.h  mock_ostream.h  test_stream_input.cpp  test_stream_output.cpp
